Changed font-display to block to prevent jumping text

--- a/src/assets/scss/03_generic/_generic.fonts.scss
+++ b/src/assets/scss/03_generic/_generic.fonts.scss
@@ -5,49 +5,49 @@
   src: url('~assets/fonts/Manrope/Manrope-ExtraBold.woff2') format('woff2');
   font-style: normal;
   font-weight: 800;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-Bold.woff2') format('woff2');
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-SemiBold.woff2') format('woff2');
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-Medium.woff2') format('woff2');
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-Regular.woff2') format('woff2');
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-Light.woff2') format('woff2');
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: block;
 }
 @font-face {
   font-family: 'Manrope';
   src: url('~assets/fonts/Manrope/Manrope-ExtraLight.woff2') format('woff2');
   font-style: normal;
   font-weight: 200;
-  font-display: swap;
+  font-display: block;
 }
 
 // Headings
@@ -57,7 +57,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Thin.woff2') format('woff2');
   font-style: normal;
   font-weight: 100;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -65,7 +65,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-ExtraLight.woff2') format('woff2');
   font-style: normal;
   font-weight: 200;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -73,7 +73,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Light.woff2') format('woff2');
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -81,7 +81,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Regular.woff2') format('woff2');
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -89,7 +89,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Medium.woff2') format('woff2');
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -97,7 +97,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-SemiBold.woff2') format('woff2');
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -105,7 +105,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Bold.woff2') format('woff2');
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -113,7 +113,7 @@
   src: url('~assets/fonts/Metropolis/Metropolis-ExtraBold.woff2') format('woff2');
   font-style: normal;
   font-weight: 800;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -121,5 +121,5 @@
   src: url('~assets/fonts/Metropolis/Metropolis-Black.woff2') format('woff2');
   font-style: normal;
   font-weight: 900;
-  font-display: swap;
+  font-display: block;
 }
